<resources>
    <string name="app_name">Spirala1</string>
    <string name="naziv">Naziva kviza - INPUT</string>
    <string name="pitanjaKViz">Pitanja u kvizu</string>
    <string name="mogucaKviz">Moguca pitanja</string>
    <string name="dodajKViz">Dodaj Kviz</string>
    <string name="nazivPitanje">Naziv pitanja - INPUT</string>
    <string name="odgovor">Odgovor</string>
    <string name="sacuvajPitanje">Spasi pitanje</string>
    <string name="odgovori">Odgovori</string>
    <string name="add">Dodaj</string>
    <string name="addCorrect">Dodaj tacan</string>
    <string name="nazivKategorije">Naziv Kategorije</string>
    <string name="ikona">Ikona</string>
    <string name="dodajIkonu">Dodaj Ikonu</string>
    <string name="spasiKategoriju">Spasi Kategoriju</string>
    <string name="finishQuiz">Završi kviz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
