<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aktivnosti.DodajKategorijuAkt">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNaziv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/nazivKategorije" />

    <EditText
        android:id="@+id/etIkona"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="5dp"
        android:hint="@string/ikona"
        app:layout_constraintEnd_toStartOf="@id/btnDodajIkonu"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNaziv"
        android:enabled="false" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnDodajIkonu"
        app:layout_constraintTop_toBottomOf="@id/etNaziv"
        app:layout_constraintStart_toEndOf="@id/etIkona"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/saveBtn"
        android:text="@string/dodajIkonu"
        android:textColor="@color/textBtn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDodajKategoriju"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etIkona"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/saveBtn"
        android:textColor="@color/textBtn"
        android:text="@string/spasiKategoriju"/>
</android.support.constraint.ConstraintLayout>